--- a/package.json
+++ b/package.json
@@ -16,8 +16,8 @@
     "@formspree/react": "^2.5.1",
     "framer-motion": "^11.15.0",
     "next": "^15.1.3",
-    "react": "^19",
-    "react-dom": "^19",
+    "react": "18",
+    "react-dom": "18",
     "react-icons": "^5.4.0",
     "sass": "^1.83.1",
     "swiper": "^11.2.0"
